<resources>
    <string name="app_name">WhatsNext</string>
    <string name="debug_text">This is a debug page. If you see this page, while developing, welcome to debug. If you see this page as a user, please report to your nearest friendly snow dragon support team</string>
    <string name="database_update_message">Update of task with id: %1$s, completed successfully</string>
    <string name="database_add_message">Task with id: %1$s, added to database successfully</string>
    <string name="database_delete_message">Task with id: %1$s, deleted from database successfully</string>
    <string name="database_get_message">Retrieval of all tasks from database completed successfully: List: %1$s</string>
    <string name="database_general_message">%1$s</string>
    <string name="addition_deadline_prompt_message">Complete by </string>
    <string name="addition_status_button_message">"Completed"</string>
    <string name="addition_add_button_message">"Add"</string>
    <string name="menu_new_task_item_title">New task</string>
    <string name="detail_status_button_message">Status</string>
    <string name="detail_update_button_message">Update</string>
    <string name="detail_delete_button_message">Delete</string>
    <string name="detail_description_edittext_message">Add description</string>
    <string name="detail_category_edittext_message">Add category</string>
    <string name="detail_name_edittext_message">Name of task</string>
    <string name="sort_by_name_textview_message">Name</string>
    <string name="sort_by_category_textview_message">Category</string>
    <string name="sort_by_status_textview_message">Status</string>
    <string name="sort_by_name_deadline_message">Deadline</string>
    <string name="sort_selection_title">Sort by</string>
    <string name="navigation_drawer_open">Drawer opens</string>
    <string name="navigation_drawer_closer">Drawer close</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="sort_by">Sort by</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="unfinished_tasks">Unfinished tasks</string>
    <string name="delete">Delete</string>
    <string name="not_done">Not Done</string>
    <string name="pause">Pause</string>
    <string name="in_progress_short_form">In Prog</string>
    <string name="done">Done</string>
    <string name="on_hold">On Hold</string>
    <string name="addition_cancel_button_message">Cancel</string>
    <string name="addition_status_prompt_message">Status</string>
    <string name="contextual_action_bar_delete">delete</string>
    <string name="back">Back</string>
    <string name="done_long_form">Done</string>
    <string name="mark_multiple_items_as">Mark as</string>
    <string name="not_done_long_form">Not done</string>
    <string name="in_progress_long_form">In progress</string>
    <string name="on_hold_long_form">On hold</string>
</resources>
