<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/sort_block"
    >

    <TextView
        android:id="@+id/sort_fragment_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_selection_title"
        android:textSize="24sp"
        android:padding="8dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/sort_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_name_textview_message"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:padding="8dp"

        app:layout_constraintTop_toBottomOf="@id/sort_fragment_title_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/sort_category_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_category_textview_message"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/sort_name_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sort_deadline_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_name_deadline_message"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/sort_category_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sort_status_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_status_textview_message"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/sort_deadline_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>