<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_addition_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="gravity">

    <EditText
        android:id="@+id/addition_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/detail_name_edittext_message"
        android:inputType="textShortMessage|text|textAutoComplete"
        android:singleLine="false"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addition_category_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:inputType="textShortMessage|text|textAutoComplete"
        android:textSize="@dimen/text_size_medium_large"
        android:hint="@string/detail_category_edittext_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addition_name_edittext" />

    <TextView
        android:id="@+id/addition_status_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/addition_status_prompt_message"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_medium_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addition_category_edittext" />

    <Spinner
        android:id="@+id/addition_status_spinner"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:dropDownWidth="wrap_content"
        android:dropDownVerticalOffset="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addition_status_prompt" />

    <TextView
        android:id="@+id/addition_deadline_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/addition_deadline_prompt_message"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_medium_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addition_status_spinner"
        app:layout_constraintTop_toBottomOf="@+id/addition_category_edittext" />

    <TextView
        android:id="@+id/addition_deadline_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@+id/addition_status_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addition_status_spinner"
        app:layout_constraintTop_toBottomOf="@+id/addition_deadline_prompt"
        tools:text="26/06/2019" />

    <EditText
        android:id="@+id/addition_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="@dimen/text_size_medium_large"
        android:background="@null"
        android:hint="@string/detail_description_edittext_message"
        app:layout_constraintBottom_toTopOf="@+id/addition_horizontal_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addition_status_spinner" />

    <View
        android:id="@+id/addition_horizontal_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/addition_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/addition_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/fui_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addition_cancel_button"
            android:text="@string/addition_cancel_button_message"
            style="@style/FragmentButtons"
            />

        <View
            android:id="@+id/addition_vertical_divider"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/colorLightGray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="?attr/actionBarSize"
            />


        <Button
            android:id="@+id/addition_add_button"
            android:text="@string/addition_add_button_message"
            style="@style/FragmentButtons"

/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>