<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="gravity">

    <EditText
        android:id="@+id/detail_name_edittext"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:hint="@string/detail_name_edittext_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CS2100 tutorial 9" />

    <EditText
        android:id="@+id/detail_category_edittext"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:hint="@string/detail_category_edittext_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name_edittext"
        tools:text="Category" />


    <EditText
        android:id="@+id/detail_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/detail_description_edittext_message"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_horizontal_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_category_edittext"
        tools:text="Description" />

    <Spinner
        android:id="@+id/detail_status_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:dropDownWidth="wrap_content"
        android:dropDownVerticalOffset="48dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_category_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_name_edittext"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_deadline_textview"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|start"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_description_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_category_edittext"
        app:layout_constraintTop_toBottomOf="@id/detail_status_spinner"
        tools:text="19/08/2019" />

    <View
        android:id="@+id/detail_horizontal_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/detail_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <LinearLayout
        android:id="@+id/detail_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/fui_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/detail_update_button"
            android:text="@string/detail_update_button_message"
            style="@style/FragmentButtons"
            />

        <View
            android:id="@+id/detail_vertical_divider"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/colorLightGray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="?attr/actionBarSize"
            />

        <Button
            android:id="@+id/detail_delete_button"
            android:text="@string/detail_delete_button_message"
            style="@style/FragmentButtons"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>